--- a/第一次打卡学习.md
+++ b/第一次打卡学习.md
@@ -7,7 +7,8 @@
 
 ## 定义一些有用的function进行方便画图。
 
--import numpy as np
+```python
+import numpy as np
 import torch
 import torch.nn.functional as F
 from matplotlib import pyplot as plt
@@ -29,7 +30,7 @@ def make_grid(images, size=64):
     for i, im in enumerate(images):
         output_im.paste(im.resize((size, size)), (i * size, 0))
     return output_im
-
+```
 
  Mac users may need device = 'mps' (untested)
 device = torch.device("cuda" if torch.cuda.is_available() else "cpu")
