--- a/第一次打卡学习.md
+++ b/第一次打卡学习.md
@@ -1,6 +1,6 @@
 # diffusion model 学习
--画图作业两个展示：
--具体代码学习：
+- 画图作业两个展示：
+- 具体代码学习：
 ## 调用hugging face相关学习资料。
 
 - %pip install -qq -U diffusers datasets transformers accelerate ftfy pyarrow==9.0.0 install diffuser 的library
@@ -44,6 +44,7 @@ YouTubeVideo("W4Mcuh38wyM")
 
 
 ## 调用训练好的pipeline。
+```python
 from diffusers import StableDiffusionPipeline
 
 *Check out https://huggingface.co/sd-dreambooth-library for loads of models from the community
@@ -53,12 +54,14 @@ model_id = "sd-dreambooth-library/mr-potato-head"
 pipe = StableDiffusionPipeline.from_pretrained(model_id, torch_dtype=torch.float16).to(
     device
 )
+```
 
 当进行完load后，可以用 prompt进行模型的生成。
+```python
 prompt = "an abstract oil painting of sks mr potato head by picasso"
 image = pipe(prompt, num_inference_steps=50, guidance_scale=7.5).images[0]
 image
-
+```
 ## 三个重点部分：
 The core API of 🤗 Diffusers is divided into three main components:
 
