--- a/第一次打卡学习.md
+++ b/第一次打卡学习.md
@@ -65,9 +65,9 @@ image
 ## 三个重点部分：
 The core API of 🤗 Diffusers is divided into three main components:
 
-Pipelines: high-level classes designed to rapidly generate samples from popular trained diffusion models in a user-friendly fashion.
-Models: popular architectures for training new diffusion models, e.g. UNet.
-Schedulers: various techniques for generating images from noise during inference as well as to generate noisy images for training.
+- Pipelines: high-level classes designed to rapidly generate samples from popular trained diffusion models in a user-friendly fashion.
+- Models: popular architectures for training new diffusion models, e.g. UNet.
+- Schedulers: various techniques for generating images from noise during inference as well as to generate noisy images for training.
 
 pipeline： 就是比较有名的训练好的整个model和流程。
 model：使用的有用的model structure，普遍用来trian不同的数据。
