--- a/第一次打卡学习.md
+++ b/第一次打卡学习.md
@@ -1,5 +1,6 @@
 # diffusion model 学习
 - 画图作业两个展示：
+![image](https://github.com/cosmondyang/diffusion_model/blob/main/cyber%20cat.png)
 - 具体代码学习：
   
 ## 调用hugging face相关学习资料。
