--- a/第二次打卡学习.md
+++ b/第二次打卡学习.md
@@ -1,13 +1,13 @@
 # 学习train class-conditioned diffusion model 
 ## 最基础开始
-'''python
+```python
 pip install -q diffusers 
-'''
+```
 先进行setup
 
 之后进行import
 
-'''python'''
+```python
 import torch
 import torchvision
 from torch import nn
@@ -19,13 +19,13 @@ from tqdm.auto import tqdm
 
 device = 'mps' if torch.backends.mps.is_available() else 'cuda' if torch.cuda.is_available() else 'cpu'
 print(f'Using device: {device}')
-'''
+```
 上述引用了 diffusers 中的 ddpmscheduler和unet2dmodel
 以及torch中的functional被称作F。
 以及torch 中的nn。
 
 下一步引用mnist
-'''python 
+```python 
 
 # Load the dataset
 dataset = torchvision.datasets.MNIST(root="mnist/", train=True, download=True, transform=torchvision.transforms.ToTensor())
@@ -38,12 +38,12 @@ x, y = next(iter(train_dataloader))
 print('Input shape:', x.shape)
 print('Labels:', y)
 plt.imshow(torchvision.utils.make_grid(x)[0], cmap='Greys');
-'''
+```
 torchvision.dataset.MNIST 是load最经典的数据。
 将上述数据取到一个dataloader。（dataloader就是一个框架取数据，有维度）
 反复看例子。通过imshow。
 此处注解
-###chatgpt对于dataloader是何的解释。
+### chatgpt对于dataloader是何的解释。
 在计算机编程和机器学习领域，"DataLoader" 是一个常见的概念，通常指的是用于加载和管理数据的工具或类。具体来说，DataLoader 通常用于以下情况：
 数据加载： DataLoader 用于从数据源（如文件、数据库、网络等）中加载数据，并将数据转换为程序可以处理的格式，例如数组、张量或其他数据结构。
 数据批处理： DataLoader 可以将数据划分为小批次（batch），以便进行批处理（batch processing）。批处理是一种常见的数据处理技术，它可以提高训练模型的效率，特别是在深度学习中。
@@ -52,7 +52,7 @@ torchvision.dataset.MNIST 是load最经典的数据。
 在机器学习中，特别是深度学习，PyTorch 和 TensorFlow 等框架提供了内置的 DataLoader 类，用于加载和处理训练和测试数据。这些库的 DataLoader 类通常具有配置数据加载、批处理大小、数据增强和数据迭代的选项。
 总之，DataLoader 是一个重要的工具，用于有效地处理和管理机器学习任务中的数据，以便训练和评估模型。它有助于简化数据加载和处理的复杂性，同时提高了代码的可维护性。
 
-##创建一个class-conditioned unet
+## 创建一个class-conditioned unet
 具体方法如下：
 先建一个unet2dmodel标准的。
 通过一个embedding layer，学习class和unet之间的关系。
@@ -62,7 +62,7 @@ net_input=torch.cat((x,class_cond),1)
 
 我们将class_emb_size 设为4之后，其实这个数可以为任意，1到10或者更多。
 classconditionedunet将长成如下模样。
-'''python'''
+```python
 class ClassConditionedUnet(nn.Module):
   def __init__(self, num_classes=10, class_emb_size=4):
     super().__init__()
@@ -105,7 +105,7 @@ class ClassConditionedUnet(nn.Module):
     # Feed this to the UNet alongside the timestep and return the prediction
     return self.model(net_input, t).sample # (bs, 1, 28, 28)
 
-  '''
+  ```
 
   这个classconditionedunet值得深入学习。把他搞懂。
 
@@ -115,7 +115,7 @@ class ClassConditionedUnet(nn.Module):
   我们现在也是进行noise的prediction从原先的DDPMscheduler中。
 
   先创建一个noise过的scheduler
-  '''python
+ ```python
   # Create a scheduler
 noise_scheduler = DDPMScheduler(num_train_timesteps=1000, beta_schedule='squaredcos_cap_v2')
 '''python
@@ -160,11 +160,11 @@ for epoch in range(n_epochs):
     print(f'Finished epoch {epoch}. Average of the last 100 loss values: {avg_loss:05f}')
 # View the loss curve
 plt.plot(losses)
-'''
+```
 
 ##chatgpt对于finetune代码的解释
 以下是一段添加噪音和去除噪音的finetune代码，，我将用chatgpt对之进行一个解释。
-'''python'''
+```python
 import wandb
 import numpy as np
 import torch, torchvision
@@ -285,7 +285,7 @@ def train(
     
     # Wrap up the run
     wandb.finish()
-    '''
+```
 chatgpt 解释：
 这段代码是一个 Python 脚本，用于训练一个模型，该模型通过添加噪声来实现对输入图像的反向扩散，并学习去噪。以下是对代码的主要部分的解释：
 
